--- a/sample.html
+++ b/sample.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>다모애</title>
 </head>
 <body>
-    
+    <h1>form 태그 연습(p.134)</h1>
+    <form name="sample_order"> <!-- method="post" name="sample_form" action="알려부면 쓰는 것(주소/파일)" -->
+        <div class="user_inputs">
+            <div class="name_field">
+                <label for="user_name">이름</label>
+                <input type="text" id="user_name" name="user_name">
+            </div>
+            <div class="email_field">
+                <label for="user_email">이메일</label>
+                <input type="email" id="user_email" name="user_email">
+            </div>
+            <div class="sns_field">
+                <label for="user_sns">sns주소</label>
+                <input type="url" id="user_sns" name="user_sns">
+            </div>
+            <div class="address_field">
+                <label for="user_address">주소</label>
+                <input type="text" id="user_address" name="user_address">
+            </div>
+        </div>
+        <!-- <label for="email">이메일</label> 
+        <input type="email" id="email"> -->
+    </form>
 </body>
 </html>
