--- a/sample.html
+++ b/sample.html
@@ -47,31 +47,66 @@
             </div>
         </div>
     </div>
-    <!------- form ------->
-    
-    <form name="sample_order"> <!-- method="post" name="sample_form" action="알려주면 쓰는 것(주소/파일)" -->
-        <div class="user_inputs">
-            <div class="name_field">
-                <label for="user_name">이름</label>
-                <input type="text" id="user_name" name="user_name">
-            </div>
-            <div class="email_field">
-                <label for="user_email">이메일</label>
-                <input type="email" id="user_email" name="user_email">
-            </div>
-            <div class="sns_field">
-                <label for="user_sns">sns주소</label>
-                <input type="url" id="user_sns" name="user_sns">
-            </div>
-            <div class="address_field">
-                <label for="user_address">주소</label>
-                <input type="text" id="user_address" name="user_address">
-            </div>
+    <section id="main" class="subpage">
+        <h2>sample</h2>
+        <h3>무료 샘플신청</h3>
+        <div class="article-wrap">
+            <article>
+                <h2 class="d-none">신청서-사용자 입력부분</h2>
+                <form name="sample-form">
+                    <div class="form-wrap">
+                        <h3>■ 신청서</h3>
+                        <div class="user-form">
+                            <ul>
+                                <li>
+                                    <label for="userName">이름</label>
+                                    <input type="text" id="userName" name="userName" maxlength="20" placeholder="ex) 홍길동">
+                                </li>
+                                <li>
+                                    <label for="userEmail">이메일</label>
+                                    <input type="email" id="userEmail" name="userEmail" placeholder="ex) address@domain.com">
+                                </li>
+                                <li>
+                                    <label for="userSns">SNS</label>
+                                    <input type="url" id="userSns" name="userSns" placeholder="ex) https://insta.com/your-id">
+                                </li>
+                                <li>
+                                    <label for="userAddress1">주소</label>
+                                    <input type="text" id="userAddress1" name="userAddress1" placeholder="ex) 광주광역시 서구 경열로 3 (농성동)">
+                                    <input type="button" id="searchAddress" onclick="address_find()" value="검색">
+                                    <input type="text" id="userAddress2" name="userAddress2" placeholder="나머지 주소">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="agreement-form">
+                            <h3>■ 개인정보수집&middot;이용동의</h3>
+                            <div class="agreement">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quidem hic voluptates odit voluptatum officiis, adipisci praesentium aliquam. Voluptatibus, perspiciatis modi rerum temporibus fuga maiores cum magnam pariatur natus dolor.
+                            </div>
+                            <div class="agreement-box">
+                                <input type="checkbox" id="userAgreement" name="userAgreement">
+                                <label for="userAgreement">동의합니다.</label>
+                            </div>
+                        </div>
+                        <div class="btns">
+                            <input type="submit" value="신청">
+                            <input type="reset" value="취소">
+                        </div>
+                    </div>
+                </form>
+            </article>
         </div>
-        <!-- <label for="email">이메일</label> 
-        <input type="email" id="email"> -->
-    </form>
-    <!------- form ------->
+    </section>
     <footer>
         <h2 class="d-none">다모애 웹사이트 저작권 및 연락처, 주소 정보</h2>
         <div class="footer-wrap">
@@ -97,5 +132,10 @@
             </div>
         </div>
     </footer>
+    <script>
+        function address_find() {
+            alert("DB점검으로 인해 해당 서비스 이용이 불가능합니다.")
+        }
+    </script>
 </body>
 </html>
