사이드배너 추가

--- a/sample.html
+++ b/sample.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <h1 class="d-none">다모애 테라피 샴푸</h1>
+    <div class="side-banner">
+        <a href="#" onclick="alert('이벤트가 마감되었습니다!')">
+            <img src="images/side_img.png" alt="side-banner">
+        </a>
+    </div>
     <header>
         <h2 class="d-none">브랜드 로고와 내비게이션</h2> <!-- 시멘틱태그는 제목 추가 필수 -->
         <div class="header-wrap">
