--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
     <!-- 구글 폰트 아이콘 삽입코드 -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <!-- 폰트어썸 삽입코드 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <title>다모애</title>
 </head>
 <body>
     <h1 class="d-none">다모애 테라피 샴푸</h1>
+    <div id="modal"><!-- 반투명 배경 -->
+        <div class="modal-wrap"><!-- 본문 컨텐츠 컨테이너 -->
+            <div class="close-modal">
+                <i class="fa-solid fa-circle-xmark"></i>
+            </div>
+            <div class="modal-title">
+                <h3>고객센터</h3>
+                <h4>이메일 문의, 접수</h4>
+            </div>
+        </div>
+    </div>
     <header>
         <h2 class="d-none">브랜드 로고와 내비게이션</h2> <!-- 시멘틱태그는 제목 추가 필수 -->
         <div class="header-wrap">
@@ -26,17 +39,17 @@
             <nav class="header-nav">
                 <h3 class="d-none">내비게이션</h3>
                     <ul>
-                        <li><a href="#">다모애</a></li>
-                        <li><a href="#">제품소개</a></li>
-                        <li><a href="#">샘플신청</a></li>
-                        <li><a href="#">고객센터</a></li>
+                        <li><a href="company.html">다모애</a></li>
+                        <li><a href="product.html">제품소개</a></li>
+                        <li><a href="sample.html">샘플신청</a></li>
+                        <li><a href="cs.html">고객센터</a></li>
                     </ul>
             </nav>
             <!-- .links>ul>li*3>a[href=#]>img[src=images/top_icons$.png] -->
             <div class="links">
                 <ul>
-                    <li><a href="#"><img src="images/top_icon1.png" alt="홈"></a></li>
-                    <li><a href="#"><img src="images/top_icon2.png" alt="메일"></a></li>
+                    <li><a href="/"><img src="images/top_icon1.png" alt="홈"></a></li>
+                    <li><a href="#" onclick="open_mailer()"><img src="images/top_icon2.png" alt="메일"></a></li>
                     <li><a href="#"><img src="images/top_icon3.png" alt="검색"></a></li>
                 </ul>
             </div>
@@ -69,7 +82,7 @@
                                 <!-- <div class="buy">
                                     <a href="#" onclick="confirm('지금 결제하시겠습니까?')">
                                         <span class="material-icons md-48 md-light damo">
-                                        credit_card
+                                            credit_card
                                         </span>
                                     </a>
                                 </div> -->
@@ -126,5 +139,6 @@
             </div>
         </div>
     </footer>
+    <script src="script/main.js"></script>
 </body>
 </html>
