--- a/sample.html
+++ b/sample.html
@@ -40,7 +40,7 @@
             <div class="links">
                 <ul>
                     <li><a href="#"><img src="images/top_icon1.png" alt="홈"></a></li>
-                    <li><a href="#"><img src="images/top_icon2.png" alt="메일"></a></li>
+                    <li><a href="#" onclick="open_mailer()"><img src="images/top_icon2.png" alt="메일"></a></li>
                     <li><a href="#"><img src="images/top_icon3.png" alt="검색"></a></li>
                 </ul>
             </div>
@@ -138,10 +138,6 @@
             </div>
         </div>
     </footer>
-    <script>
-        function address_find() {
-            alert("DB점검으로 인해 해당 서비스 이용이 불가능합니다.")
-        }
-    </script>
+    <script src="script/main.js"></script>
 </body>
 </html>
