--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             </div>
         </div>
     </div>
+    <div class="side-banner">
+        <a href="#" onclick="alert('이벤트가 마감되었습니다!')">
+            <img src="images/side_img.png" alt="side-banner">
+        </a>
+    </div>
     <header>
         <h2 class="d-none">브랜드 로고와 내비게이션</h2> <!-- 시멘틱태그는 제목 추가 필수 -->
         <div class="header-wrap">
