--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
                 <h3>고객센터</h3>
                 <h4>이메일 문의, 접수</h4>
             </div>
+            <div class="user-form">
+                <ul>
+                    <li>
+                        <label for="userName">이름</label>
+                        <input type="text" id="userName" name="userName" maxlength="20" placeholder="ex) 홍길동">
+                    </li>
+                    <li>
+                        <label for="userPhone">연락처</label> 
+                        <input type="tel" id="userPhone" name="userPhone" placeholder="ex) 010-1234-5678">
+                    </li>
+                    <li>
+                        <label for="userEmail">이메일</label>
+                        <input type="email" id="userEmail" name="userEmail" placeholder="ex) address@domain.com">
+                    </li>
+                    <li>
+                        <label for="userContent">내용</label>
+                        <input type="text" id="userContent" name="userContent" maxlength="20" placeholder="ex) 홍길동">
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="side-banner">
